docs/docs/apache-airflow-providers-nomad/0.0.6/_sources/commits.rst.txt
 .. This file is part of apache-airflow-providers-nomad which is
    released under Apache License 2.0. See file LICENSE or go to

       http://www.apache.org/licenses/LICENSE-2.0

 .. for full license details.

 .. Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

 .. NOTE! THIS FILE IS AUTOMATICALLY GENERATED AND WILL BE OVERWRITTEN!

 .. IF YOU WANT TO MODIFY THIS FILE, YOU SHOULD MODIFY THE TEMPLATE
    `PROVIDER_COMMITS_TEMPLATE.rst.jinja2` IN the `dev/breeze/src/airflow_breeze/templates` DIRECTORY

 .. THE REMAINDER OF THE FILE IS AUTOMATICALLY GENERATED. IT WILL BE OVERWRITTEN!


This is detailed commit list of changes for versions provider package: ``nomad``.
For high-level changelog, see :doc:`package information including changelog <index>`.

.. airflow-providers-commits::


0.0.6
...........

Latest change: 2025-12-11

================================================================================================================== ========== ==============================================
Commit                                                                                                             Committed  Subject
================================================================================================================== ========== ==============================================
`5c6c63a <https://github.com/juditnovak/airflow-provider-nomad/commit/5c6c63a51f609845f3185315852757d8358ac683>`__ 2025-12-11 ``Upgrade to Airflow 3.1.3 (#50)``
`a14ce54 <https://github.com/juditnovak/airflow-provider-nomad/commit/a14ce5436c76d9c558956004e7ab8f08b2865afc>`__ 2025-12-09 ``[VERSION] Version increase: 0.0.6.dev2 (#59)``
`2ce5d47 <https://github.com/juditnovak/airflow-provider-nomad/commit/2ce5d472a8921533af1b3b36369d09db213ffbef>`__ 2025-12-08 ``[BUGFIX] Configurable runner logs (#56)``
`c65f2bb <https://github.com/juditnovak/airflow-provider-nomad/commit/c65f2bb92cfa57b7035b81885f983ad67531db60>`__ 2025-12-08 ``Minor administrative fixes (#52)``
`aae08a3 <https://github.com/juditnovak/airflow-provider-nomad/commit/aae08a30dc20d5de05886acdf187b6f5b14176b5>`__ 2025-12-07 ``[VERSION] 0.0.6.dev1 (#51)``
================================================================================================================== ========== ==============================================

0.0.5
...........

Latest change: 2025-11-19

================================================================================================================== ========== ==============================================
Commit                                                                                                             Committed  Subject
================================================================================================================== ========== ==============================================
`6ca78a7 <https://github.com/juditnovak/airflow-provider-nomad/commit/6ca78a7c0d20b73c4ac8dff1aeb8659487c7faad>`__ 2025-11-19 ``[RELEASE] Pre-release 0.0.5b1 (#46) -- no code changes``
================================================================================================================== ========== ==============================================

0.0.4
...........

Latest change: 2025-11-08

================================================================================================================== ========== ==============================================
Commit                                                                                                             Committed  Subject
================================================================================================================== ========== ==============================================
`8976615 <https://github.com/juditnovak/airflow-provider-nomad/commit/8976615e14d87a142ff1e6f89fb9714394ed0d82>`__ 2025-11-08 ``Resource allocation (#33)``
`1cb5114 <https://github.com/juditnovak/airflow-provider-nomad/commit/1cb51149b153237b75c2aa48d2986a278a38c6af>`__ 2025-09-22 ``Coverage and small fixes for workload management (#32)``
`7a4f926 <https://github.com/juditnovak/airflow-provider-nomad/commit/7a4f926141d433616206809e4ae0334ee9180252>`__ 2025-09-22 ``Extending test coverage (#31)``
`af1734d <https://github.com/juditnovak/airflow-provider-nomad/commit/af1734dda2d7c533c1d3fd00ceee0bebe51fe4e4>`__ 2025-09-21 ``Tenacity retries for job submission and deregister (#30)``
`0df196f <https://github.com/juditnovak/airflow-provider-nomad/commit/0df196f881e1041cf55a500bb734236cfe732e7a>`__ 2025-09-21 ``Setting latest changes to refer to 0.0.dev4 (#29)``
================================================================================================================== ========== ==============================================

0.0.3
......

Latest change: 2025-09-19

================================================================================================================== ========== ==============================================
Commit                                                                                                             Committed  Subject
================================================================================================================== ========== ==============================================
`d9c2e20 <https://github.com/juditnovak/airflow-provider-nomad/commit/d9c2e209d3d318d3cb725f90dc6025ec8610f168>`__ 2025-09-19 ``0.0.3rc (#24)``
`fc08ddc <https://github.com/juditnovak/airflow-provider-nomad/commit/fc08ddc17a784772102845f01f629ce0a63c8478>`__ 2025-09-19 ``Docs in Production structure, versioning enabled (#23)``
`79e5dc4 <https://github.com/juditnovak/airflow-provider-nomad/commit/79e5dc4f5a67252393f36cfd3a5f9ace2fa025a6>`__ 2025-09-19 ``Decorators (#22)``
================================================================================================================== ========== ==============================================


0.0.2
......

Latest change: 2025-09-17

================================================================================================================== ========== ==============================================
Commit                                                                                                             Committed  Subject
================================================================================================================== ========== ==============================================
`df815d9 <https://github.com/juditnovak/airflow-provider-nomad/commit/df815d965518e95db5244f7c054c41586fee5640>`__ 2025-09-17 ``[DOCS] Public docs Jenkyll config (#21)``
`8c39faf <https://github.com/juditnovak/airflow-provider-nomad/commit/8c39faf248f74015b07bd68be0765fbc1adf4cb8>`__ 2025-09-17 ``2.0.0 Final cosmetics (#20)``
`d1656eb <https://github.com/juditnovak/airflow-provider-nomad/commit/d1656eb88bdb3a524154ff6bc000c5270316dca9>`__ 2025-09-17 ``Publishing documentation (#19)``
`ba1b318 <https://github.com/juditnovak/airflow-provider-nomad/commit/ba1b3181db656a37ce3730772ae80dcc3e7b44cc>`__ 2025-09-16 ``0.0.2 CHANGELOG (#18)``
`20f446e <https://github.com/juditnovak/airflow-provider-nomad/commit/20f446ecbee634d613e6988bc2857a5438685efe>`__ 2025-09-16 ``Pre 0 0 2 (#17)``
`4350612 <https://github.com/juditnovak/airflow-provider-nomad/commit/4350612ab0a4cc20a762ec1effdfe5832b1cc87a>`__ 2025-09-15 ``[CI] Timeout increase (#16)``
`55c4e5b <https://github.com/juditnovak/airflow-provider-nomad/commit/55c4e5bfd1050c23a01afdc07eb97f443e4e9e0e>`__ 2025-09-15 ``Operators: `NomadJobOperator` and `NomadTaskOperator` (#15)``
================================================================================================================== ========== ==============================================


0.0.1
......

Latest change: 2025-09-10

================================================================================================================== ========== ==============================================
Commit                                                                                                             Committed  Subject
================================================================================================================== ========== ==============================================
`268fdaf <https://github.com/juditnovak/airflow-provider-nomad/commit/268fdaf67b9494e232dfb4d069b58741fa3faa84>`__ 2025-09-10 ``Changelog for 0.0.1 (#14)````
`5ada176 <https://github.com/juditnovak/airflow-provider-nomad/commit/5ada176f5235637a415900fa0ac1e34f81503cfe>`__ 2025-09-10 ``Version 0.0.1 (#13)``
`a2a1063 <https://github.com/juditnovak/airflow-provider-nomad/commit/a2a1063b12238faf30c428db40ab50ceed4967ca>`__ 2025-09-05 ``Configuration parameter `default_job_template` (#11)``
`0cb7379 <https://github.com/juditnovak/airflow-provider-nomad/commit/0cb73796b9ebce1071192b90d51613af3386aa5d>`__ 2025-09-04 ``Enabling secure Nomad connections (#10)``
`530d483 <https://github.com/juditnovak/airflow-provider-nomad/commit/530d483a659de101e7c6883776642bc22eb92e9f>`__ 2025-09-04 ``Modification on logging (#9)``
`0e0f5b6 <https://github.com/juditnovak/airflow-provider-nomad/commit/0e0f5b62b31a4bbf3bd2867eae466069d5698451>`__ 2025-09-04 ``Base documentation (#8)``
`501c61c <https://github.com/juditnovak/airflow-provider-nomad/commit/501c61c5928d933cff2a329e36947a798011a0d3>`__ 2025-09-03 ``Logging finalized (#7)``
`5020779 <https://github.com/juditnovak/airflow-provider-nomad/commit/50207796bb11b5cbf29c97497b29102f68226a32>`__ 2025-09-03 ``Pipeline on merge to `main` (#6)``
`cbf10de <https://github.com/juditnovak/airflow-provider-nomad/commit/cbf10de022cface32221f33411ee9cd4b63b6cf7>`__ 2025-09-02 ``Cleanup and small executor enhancements (#5)``
`c2368f1 <https://github.com/juditnovak/airflow-provider-nomad/commit/c2368f105e9c5fbb6df54d27dec0dd41ed8ec03a>`__ 2025-09-01 ``Testts completed and cleaned up (#4)``
`8b0002b <https://github.com/juditnovak/airflow-provider-nomad/commit/8b0002b41afd1fbf61237d19d4c4cb7b4bac4513>`__ 2025-08-31 ``Actual system tests (#3)``
`6c735e5 <https://github.com/juditnovak/airflow-provider-nomad/commit/6c735e5a91e427cf54ea8890ccf5084ac20df0c4>`__ 2025-08-28 ``Nomad executor with bash operator (#1)``
`f30010f <https://github.com/juditnovak/airflow-provider-nomad/commit/f30010faa75e892488d86c5c823b404a1f5d1c23>`__ 2025-08-27 ``Initializing repository``
================================================================================================================== ========== ==============================================
